# rustc-pr85868-regression

./: Cargo.toml
something/: Cargo.toml
something/src/: main.rs
